# KosSashaLogLibPy

./: .gitignore  README.md  pyproject.toml  test.py
src/logger_KosSasha/: __init__.py
src/package_KosSasha/: __init__.py  module_logger.py
