[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SashaLogLibPy_KosSasha"
version = "0.0.1"
authors = [
  { name="KosSasha", email="sasha.kosolobov@gmail.com" },
]
description = "Small logging package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/KosSashaHelloWorld/AlexLogLibPy"
Issues = "https://github.com/KosSashaHelloWorld/AlexLogLibPy/issues"